[gd_scene load_steps=51 format=3 uid="uid://dtpehdp2rfsuh"]

[ext_resource type="Script" path="res://battle/battle.gd" id="1_85t5n"]
[ext_resource type="Texture2D" uid="uid://3oirll1yg54k" path="res://assets/isometric/cave_temple_battle.png" id="2_cb4ye"]
[ext_resource type="Script" path="res://decorators/fade_decorator.gd" id="2_cfdr2"]
[ext_resource type="PackedScene" uid="uid://bo77v3uohwvy1" path="res://mons/bitleon.tscn" id="5_a0vn4"]
[ext_resource type="PackedScene" uid="uid://ds2pwty7e10tr" path="res://battle/monblock.tscn" id="5_fkqod"]
[ext_resource type="PackedScene" uid="uid://dwydicdw81oc0" path="res://battle/animator.tscn" id="15_dus4q"]
[ext_resource type="PackedScene" uid="uid://4c05s8pkxawq" path="res://battle/log.tscn" id="16_ugd8u"]
[ext_resource type="Shader" path="res://battle/monblock.gdshader" id="17_f5gwn"]
[ext_resource type="Script" path="res://battle/speed_controls.gd" id="19_4ka6e"]
[ext_resource type="Script" path="res://battle/selectable_button.gd" id="19_8gl6u"]
[ext_resource type="Texture2D" uid="uid://dk21l7v2aax6u" path="res://assets/ui/battle/play_selected.png" id="19_gnxuv"]
[ext_resource type="Texture2D" uid="uid://cfjdvwuvnd85b" path="res://assets/ui/battle/play_selected_hover.png" id="21_lxmei"]
[ext_resource type="Texture2D" uid="uid://hxinacukfcas" path="res://assets/ui/battle/play_selected_pressed.png" id="22_6wf36"]
[ext_resource type="Texture2D" uid="uid://dbfqgr6err8q3" path="res://assets/ui/battle/play_unselected.png" id="22_sc4kn"]
[ext_resource type="Texture2D" uid="uid://6qcrwq5fgl26" path="res://assets/ui/battle/play_unselected_hover.png" id="23_ovl1o"]
[ext_resource type="Texture2D" uid="uid://bfq2ftx62qyut" path="res://assets/ui/battle/play_unselected_pressed.png" id="25_58t56"]
[ext_resource type="Texture2D" uid="uid://cv675y4gfjwr2" path="res://assets/ui/battle/speedup_unselected.png" id="26_de88d"]
[ext_resource type="Texture2D" uid="uid://bpc0ngkg0np2u" path="res://assets/ui/battle/pause_unselected.png" id="27_c6ocw"]
[ext_resource type="Texture2D" uid="uid://c8qj8pbqg6m4l" path="res://assets/ui/battle/speedup_selected.png" id="27_t3g37"]
[ext_resource type="Texture2D" uid="uid://b3v2y41o8bebb" path="res://assets/ui/battle/speedup_selected_hover.png" id="28_fxlpu"]
[ext_resource type="Texture2D" uid="uid://c423u5654d71" path="res://assets/ui/battle/pause_selected.png" id="28_iasl6"]
[ext_resource type="Texture2D" uid="uid://b1js2j5fd4y3b" path="res://assets/ui/battle/pause_selected_hover.png" id="29_4mak5"]
[ext_resource type="Texture2D" uid="uid://gp45q4afw7ue" path="res://assets/ui/battle/speedup_selected_pressed.png" id="29_iu8h3"]
[ext_resource type="Texture2D" uid="uid://b12o4kqn5jjfr" path="res://assets/ui/battle/speedup_unselected_hover.png" id="30_5hm2j"]
[ext_resource type="Texture2D" uid="uid://jkpq66hhfg7i" path="res://assets/ui/battle/pause_selected_pressed.png" id="30_uk6xc"]
[ext_resource type="Texture2D" uid="uid://cxbag2ijkv0vk" path="res://assets/ui/battle/speedup_unselected_pressed.png" id="31_52kg2"]
[ext_resource type="Texture2D" uid="uid://dnr0dbvcp8353" path="res://assets/ui/battle/pause_unselected_hover.png" id="31_wocrg"]
[ext_resource type="Texture2D" uid="uid://dyq5ntyl5ibnp" path="res://assets/ui/battle/pause_unselected_pressed.png" id="32_muvxr"]
[ext_resource type="Texture2D" uid="uid://6daimh3y1x0t" path="res://assets/ui/battle/escape_unselected.png" id="39_7mjlu"]
[ext_resource type="Script" path="res://battle/escape_controls.gd" id="40_migwn"]
[ext_resource type="Texture2D" uid="uid://cavj5xwulo4j5" path="res://assets/ui/battle/escape_selected.png" id="40_vytcv"]
[ext_resource type="Texture2D" uid="uid://il1qnpcind02" path="res://assets/ui/battle/escape_selected_hover.png" id="41_yk0s4"]
[ext_resource type="Texture2D" uid="uid://dydqenioadj7m" path="res://assets/ui/battle/escape_selected_pressed.png" id="42_yy8nj"]
[ext_resource type="Texture2D" uid="uid://b6ompunyhpbw3" path="res://assets/ui/battle/escape_unselected_hover.png" id="43_ctmj8"]
[ext_resource type="Texture2D" uid="uid://c74vtibrdvx6s" path="res://assets/ui/battle/escape_unselected_pressed.png" id="44_rf0fw"]
[ext_resource type="Texture2D" uid="uid://bowg27ny7ev06" path="res://assets/ui/battle/console9patch.png" id="47_me3k7"]
[ext_resource type="Script" path="res://battle/action_name_box.gd" id="47_yq6eb"]
[ext_resource type="Theme" uid="uid://612i0h3ltb6t" path="res://monscript_theme.tres" id="49_cid02"]
[ext_resource type="PackedScene" uid="uid://c8wcyjwqiawd8" path="res://battle/queue.tscn" id="50_q1kk0"]
[ext_resource type="PackedScene" uid="uid://fsp55qrvdmua" path="res://battle/inject_battery.tscn" id="52_bd5mg"]
[ext_resource type="PackedScene" uid="uid://dgaokh63peqxr" path="res://battle/inject_layer.tscn" id="53_4ccvo"]
[ext_resource type="PackedScene" uid="uid://cklrslmbq7v88" path="res://battle/results.tscn" id="54_5vxty"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_on0ph"]
shader = ExtResource("17_f5gwn")
shader_parameter/white_replace = Vector3(1, 0, 1)
shader_parameter/lightgray_replace = Vector3(0, 1, 1)
shader_parameter/darkgray_replace = Vector3(1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k4e6h"]
shader = ExtResource("17_f5gwn")
shader_parameter/white_replace = Vector3(1, 0, 1)
shader_parameter/lightgray_replace = Vector3(0, 1, 1)
shader_parameter/darkgray_replace = Vector3(1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wi5ma"]
shader = ExtResource("17_f5gwn")
shader_parameter/white_replace = Vector3(1, 0, 1)
shader_parameter/lightgray_replace = Vector3(0, 1, 1)
shader_parameter/darkgray_replace = Vector3(1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f23en"]
shader = ExtResource("17_f5gwn")
shader_parameter/white_replace = Vector3(1, 0, 1)
shader_parameter/lightgray_replace = Vector3(0, 1, 1)
shader_parameter/darkgray_replace = Vector3(1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rdcfl"]
shader = ExtResource("17_f5gwn")
shader_parameter/white_replace = Vector3(1, 0, 1)
shader_parameter/lightgray_replace = Vector3(0, 1, 1)
shader_parameter/darkgray_replace = Vector3(1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_deh2h"]
shader = ExtResource("17_f5gwn")
shader_parameter/white_replace = Vector3(1, 0, 1)
shader_parameter/lightgray_replace = Vector3(0, 1, 1)
shader_parameter/darkgray_replace = Vector3(1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iher2"]
shader = ExtResource("17_f5gwn")
shader_parameter/white_replace = Vector3(1, 0, 1)
shader_parameter/lightgray_replace = Vector3(0, 1, 1)
shader_parameter/darkgray_replace = Vector3(1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_837it"]
shader = ExtResource("17_f5gwn")
shader_parameter/white_replace = Vector3(1, 0, 1)
shader_parameter/lightgray_replace = Vector3(0, 1, 1)
shader_parameter/darkgray_replace = Vector3(1, 1, 0)

[node name="Battle" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_85t5n")

[node name="Scene" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Scene"]
z_index = 2
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2
color = Color(0.411765, 0.666667, 0.745098, 1)

[node name="Terrain" type="Sprite2D" parent="Scene"]
z_index = 20
texture = ExtResource("2_cb4ye")
centered = false

[node name="Mons" type="Node2D" parent="."]
z_index = 1000

[node name="PlayerMons" type="Node2D" parent="Mons"]
z_index = 30

[node name="MONPLACEHOLDER1" parent="Mons/PlayerMons" instance=ExtResource("5_a0vn4")]
position = Vector2(120, 40)

[node name="MONPLACEHOLDER2" parent="Mons/PlayerMons" instance=ExtResource("5_a0vn4")]
position = Vector2(120, 64)

[node name="MONPLACEHOLDER3" parent="Mons/PlayerMons" instance=ExtResource("5_a0vn4")]
position = Vector2(120, 88)

[node name="MONPLACEHOLDER4" parent="Mons/PlayerMons" instance=ExtResource("5_a0vn4")]
position = Vector2(120, 112)

[node name="ComputerMons" type="Node2D" parent="Mons"]
z_index = 30

[node name="MONPLACEHOLDER1" parent="Mons/ComputerMons" instance=ExtResource("5_a0vn4")]
position = Vector2(200, 40)

[node name="MONPLACEHOLDER2" parent="Mons/ComputerMons" instance=ExtResource("5_a0vn4")]
position = Vector2(200, 64)

[node name="MONPLACEHOLDER3" parent="Mons/ComputerMons" instance=ExtResource("5_a0vn4")]
position = Vector2(200, 88)

[node name="MONPLACEHOLDER4" parent="Mons/ComputerMons" instance=ExtResource("5_a0vn4")]
position = Vector2(200, 112)

[node name="Animator" parent="Mons" groups=["battle_speed_scaled"] instance=ExtResource("15_dus4q")]
z_index = 100

[node name="UI" type="Node2D" parent="."]
z_index = 2000

[node name="Results" parent="UI" instance=ExtResource("54_5vxty")]
position = Vector2(146, 72)

[node name="InjectLayer" parent="UI" instance=ExtResource("53_4ccvo")]
z_index = 1

[node name="InjectBattery" parent="UI" instance=ExtResource("52_bd5mg")]
position = Vector2(304, 2)

[node name="Queue" parent="UI" instance=ExtResource("50_q1kk0")]
position = Vector2(1, 1)

[node name="ActionNameBox" type="Node2D" parent="UI" groups=["battle_speed_scaled"]]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, 1)
script = ExtResource("47_yq6eb")

[node name="Background" type="NinePatchRect" parent="UI/ActionNameBox"]
offset_top = 2.0
offset_right = 50.0
offset_bottom = 19.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("47_me3k7")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="ActionLabel" type="RichTextLabel" parent="UI/ActionNameBox"]
offset_left = 4.0
offset_top = 3.0
offset_right = 45.0
offset_bottom = 16.0
size_flags_vertical = 4
theme = ExtResource("49_cid02")
text = "> Attack"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="EscapeControls" type="Node2D" parent="UI"]
script = ExtResource("40_migwn")

[node name="Button" type="TextureButton" parent="UI/EscapeControls"]
z_index = 100
offset_left = 262.0
offset_top = 161.0
offset_right = 317.0
offset_bottom = 179.0
texture_normal = ExtResource("39_7mjlu")
script = ExtResource("19_8gl6u")
texture_selected = ExtResource("40_vytcv")
texture_selected_hover = ExtResource("41_yk0s4")
texture_selected_pressed = ExtResource("42_yy8nj")
texture_unselected = ExtResource("39_7mjlu")
texture_unselected_hover = ExtResource("43_ctmj8")
texture_unselected_pressed = ExtResource("44_rf0fw")
toggleable = true

[node name="Text" type="RichTextLabel" parent="UI/EscapeControls"]
modulate = Color(1, 1, 0.619608, 1)
z_index = 100
offset_left = 252.0
offset_top = 133.0
offset_right = 320.0
offset_bottom = 170.0
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
bbcode_enabled = true
text = "[center]Attempting to escape.[/center]"

[node name="FadeDecorator" type="Node" parent="UI/EscapeControls/Text"]
script = ExtResource("2_cfdr2")
autostart_effect_type = 2
fade_speed = 4.0

[node name="DotTimer" type="Timer" parent="UI/EscapeControls"]
wait_time = 0.5
autostart = true

[node name="SpeedControls" type="Node2D" parent="UI"]
script = ExtResource("19_4ka6e")

[node name="Run" type="TextureButton" parent="UI/SpeedControls"]
offset_left = 1.0
offset_top = 164.0
offset_right = 16.0
offset_bottom = 179.0
texture_normal = ExtResource("19_gnxuv")
script = ExtResource("19_8gl6u")
texture_selected = ExtResource("19_gnxuv")
texture_selected_hover = ExtResource("21_lxmei")
texture_selected_pressed = ExtResource("22_6wf36")
texture_unselected = ExtResource("22_sc4kn")
texture_unselected_hover = ExtResource("23_ovl1o")
texture_unselected_pressed = ExtResource("25_58t56")
selected = true

[node name="Speedup" type="TextureButton" parent="UI/SpeedControls"]
offset_left = 16.0
offset_top = 164.0
offset_right = 31.0
offset_bottom = 179.0
texture_normal = ExtResource("26_de88d")
script = ExtResource("19_8gl6u")
texture_selected = ExtResource("27_t3g37")
texture_selected_hover = ExtResource("28_fxlpu")
texture_selected_pressed = ExtResource("29_iu8h3")
texture_unselected = ExtResource("26_de88d")
texture_unselected_hover = ExtResource("30_5hm2j")
texture_unselected_pressed = ExtResource("31_52kg2")

[node name="Pause" type="TextureButton" parent="UI/SpeedControls"]
offset_left = 31.0
offset_top = 164.0
offset_right = 46.0
offset_bottom = 179.0
texture_normal = ExtResource("27_c6ocw")
script = ExtResource("19_8gl6u")
texture_selected = ExtResource("28_iasl6")
texture_selected_hover = ExtResource("29_4mak5")
texture_selected_pressed = ExtResource("30_uk6xc")
texture_unselected = ExtResource("27_c6ocw")
texture_unselected_hover = ExtResource("31_wocrg")
texture_unselected_pressed = ExtResource("32_muvxr")

[node name="PauseFilter" type="ColorRect" parent="UI/SpeedControls"]
modulate = Color(0, 0, 1, 0)
z_index = 25
z_as_relative = false
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2

[node name="Fade" type="Node" parent="UI/SpeedControls/PauseFilter"]
script = ExtResource("2_cfdr2")
autostart_effect_type = 2
max_alpha = 0.3
fade_speed = 1.5

[node name="SpeedUpFilter" type="ColorRect" parent="UI/SpeedControls"]
modulate = Color(1, 0.054902, 0, 0)
z_index = 25
z_as_relative = false
offset_right = 320.0
offset_bottom = 180.0
mouse_filter = 2

[node name="Fade" type="Node" parent="UI/SpeedControls/SpeedUpFilter"]
script = ExtResource("2_cfdr2")
autostart_effect_type = 2
max_alpha = 0.4
fade_speed = 1.5

[node name="Log" parent="UI" groups=["battle_speed_scaled"] instance=ExtResource("16_ugd8u")]
z_index = 100
position = Vector2(67, 135)

[node name="PlayerMonBlocks" type="Node2D" parent="UI"]

[node name="Player1" parent="UI/PlayerMonBlocks" instance=ExtResource("5_fkqod")]
material = SubResource("ShaderMaterial_on0ph")
offset_left = 57.0
offset_top = 28.0
offset_right = 103.0
offset_bottom = 49.0

[node name="Player2" parent="UI/PlayerMonBlocks" instance=ExtResource("5_fkqod")]
material = SubResource("ShaderMaterial_k4e6h")
offset_left = 57.0
offset_top = 53.0
offset_right = 103.0
offset_bottom = 74.0

[node name="Player3" parent="UI/PlayerMonBlocks" instance=ExtResource("5_fkqod")]
material = SubResource("ShaderMaterial_wi5ma")
offset_left = 57.0
offset_top = 77.0
offset_right = 103.0
offset_bottom = 98.0

[node name="Player4" parent="UI/PlayerMonBlocks" instance=ExtResource("5_fkqod")]
material = SubResource("ShaderMaterial_f23en")
offset_left = 57.0
offset_top = 101.0
offset_right = 103.0
offset_bottom = 122.0

[node name="ComputerMonBlocks" type="Node2D" parent="UI"]

[node name="Computer1" parent="UI/ComputerMonBlocks" instance=ExtResource("5_fkqod")]
material = SubResource("ShaderMaterial_rdcfl")
offset_left = 217.0
offset_top = 29.0
offset_right = 263.0
offset_bottom = 50.0

[node name="Computer2" parent="UI/ComputerMonBlocks" instance=ExtResource("5_fkqod")]
material = SubResource("ShaderMaterial_deh2h")
offset_left = 217.0
offset_top = 53.0
offset_right = 263.0
offset_bottom = 74.0

[node name="Computer3" parent="UI/ComputerMonBlocks" instance=ExtResource("5_fkqod")]
material = SubResource("ShaderMaterial_iher2")
offset_left = 217.0
offset_top = 77.0
offset_right = 263.0
offset_bottom = 98.0

[node name="Computer4" parent="UI/ComputerMonBlocks" instance=ExtResource("5_fkqod")]
material = SubResource("ShaderMaterial_837it")
offset_left = 217.0
offset_top = 101.0
offset_right = 263.0
offset_bottom = 122.0

[connection signal="exit" from="UI/Results" to="." method="_on_results_exited"]
[connection signal="inject_completed" from="UI/InjectLayer" to="." method="_on_inject_completed"]
[connection signal="escape_state_changed" from="UI/EscapeControls" to="." method="_on_escape_state_changed"]
[connection signal="state_changed" from="UI/EscapeControls/Button" to="UI/EscapeControls" method="_on_escape_state_changed"]
[connection signal="timeout" from="UI/EscapeControls/DotTimer" to="UI/EscapeControls" method="_on_dot_timer_timeout"]
[connection signal="speed_changed" from="UI/SpeedControls" to="." method="_on_speed_controls_changed"]
